--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,21 @@
 <nav class="header">
 
+	<div class="header-content">
 
-XXYYZZ
+		<div class="header-options left">
+			
+			<a class="logo" href="<%= root_path %>"><span>ShaneRandolph</span></a>
+
+		</div>
+
+		<div class="header-options right">
+			
+			<a href="<%= root_path %>">About</a>
+
+		</div>
+
+	</div>
+
 </nav>
 
 <div class="header-offset">
