--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,8 @@ html, body{
  	min-height:100%;
   	height:100%;
   	width:100%;
+
+  	font-family: 'Roboto', sans-serif;
     
  	
 }
@@ -41,6 +43,14 @@ html{
 *:before,
 *:after {
   box-sizing: inherit;
+}
+
+.main-container{
+	position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .content{
