--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,19 +6,22 @@
 	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	  <%= csrf_meta_tags %>
+
+	  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	  
 	</head>
 
 	<body>
 
-		<%= render 'layouts/header' %>
-
-		<div class="content">
+		<div class="main-container">
 			
-			<%= yield %>
+			<%# render 'layouts/header' %>
+				
+				<%= yield %>
+
+			<%# render 'layouts/footer' %>
 
 		</div>
-
-		<%= render 'layouts/footer' %>
 
 	</body>
 
