--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,15 @@
 	  <%= csrf_meta_tags %>
 
 	  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	  
+
 	</head>
 
 	<body>
 
+<!-- 		Thanks for taking a look at my code; I'm flattered.  I started learning web design by spending hours in the explorer. -->
+
 		<div class="main-container">
 			
-			<%# render 'layouts/header' %>
 				
 				<%= yield %>
 
