--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -94,8 +94,25 @@ body{
 	    width: 85vw;
 
 	    section{
-	    	padding: 10vh 5vw;
+	    	padding: 10vh 3vw;
 	    	color: #666;
+
+	    	.text-content{
+	    		width: 40vw;
+			    display: inline-block;
+			    vertical-align: top;
+			    padding: 0 3vw;
+	    	}
+
+	    	.image-content{
+			    width: 30vw;
+			    display: inline-block;
+			    vertical-align: top;
+
+			    img{
+			    	max-width:100%;
+			    }
+	    	}
 
 	    	h2{
 	    		font-size: 3rem;
@@ -104,6 +121,47 @@ body{
     			margin: .5rem 0 2.5rem;
     			color: #000;
 	    	}
+
+	    	p{
+	    		font-size: 1rem;
+			    line-height: 2em;
+			    margin: 10px 0;
+	    	}
+
+	    	ul{
+	    		display: block;
+			    list-style-type: disc;
+			    -webkit-margin-before: 1em;
+			    -webkit-margin-after: 1em;
+			    -webkit-margin-start: 0px;
+			    -webkit-margin-end: 0px;
+			    -webkit-padding-start: 40px;
+	    	}
 	    }
 	}
+}
+
+.button{
+	padding: 10px 25px;
+    border-radius: 2px;
+    
+    display: inline-block;
+    margin: 0px;
+    text-align: center;
+    z-index: 99;
+    position: relative;
+    cursor: pointer;
+    
+    border: 1px solid rgba(0,0,0,0.2);
+
+    text-shadow: 0px 1px 1px rgba(0,0,0,0.2);
+    letter-spacing: -0.5px;
+
+    font-weight: 500;
+
+}
+
+.button.blue-background{
+	color: #fff;
+	background: #2980b9;
 }
