--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,174 +15,14 @@
 
 <div class="right-block">
 	
-	<section class="reveal-panel" id="welcome">
+	<%= render 'pages/home_welcome' %>
 
-		<div class="text-content">
-			
-			<h2>Hello!</h2>
+	<%= render 'pages/home_development' %>
 
-			<p>Welcome to my portfolio</p>
-			<ul>
-				<li><a>Web Development</a></li>
-				<li><a>Design/UI</a></li>
-				<li><a>SEO</a></li>
-				<li><a>SEO</a></li>
+	<%= render 'pages/home_design' %>
 
-			</ul>
+	<%= render 'pages/home_marketing' %>
 
-			<p>Click the button below to step-by-step guide or skip to a section using (the menu on the left/bottom)</p>
-
-			<br>
-
-			<a class="button blue-background click-to-reveal" data-reveal-panel-id="development">Next</a>
-
-		</div>
-
-		<div class="image-content">
-
-			<%= image_tag 'shane_randolph_photo.jpg', class:'home-main-image'%>
-
-		</div>
-
-	</section>
-
-	<section class="reveal-panel" id="development" style="display: none;">
-
-		<div class="text-content">
-
-			<h2>Development</h2>
-
-			<p>I have 4 years of development experience, primarily web applications on behalf of startups.  ... Minimum viable products to full featured applications that ...</p>
-
-			<p>Reference Projects</p>
-
-			<ul>
-				<li><a>Web Development</a></li>
-				<li><a>Design</a></li>
-
-			</ul>
-
-			<p>Suggested on the Subject</p>
-
-			<ul>
-				<li><a>Book 1</a></li>
-				<li><a>Blog 1</a></li>
-
-			</ul>
-
-			<p>Segway language between this section and the next</p>
-
-			<br>
-
-			<a class="button blue-background click-to-reveal" data-reveal-panel-id="design">Next</a>
-
-		</div>
-
-		<div class="image-content">
-
-			<%= image_tag 'shane_randolph_photo.jpg', class:'home-main-image'%>
-
-		</div>
-
-	</section>
-
-	<section class="reveal-panel" id="design" style="display: none;">
-
-		<div class="text-content">
-
-			<h2>Design</h2>
-
-			<p>... based on the ... the web design is fundamnetally communication technology.  ... did they get the message?</p>
-
-			<p>Recent projects</p>
-
-			<ul>
-				<li><a>Hiro Asian Kitchen</a></li>
-				<li><a>ComedyHere</a></li>
-
-			</ul>
-
-			<p>Suggested reading on the Subject</p>
-
-			<ul>
-				<li><a>Book 1</a></li>
-				<li><a>Blog 1</a></li>
-
-			</ul>
-
-			<p>Segway language between this section and the next</p>
-
-			<br>
-
-			<a class="button blue-background click-to-reveal" data-reveal-panel-id="marketing">Next</a>
-
-		</div>
-
-		<div class="image-content">
-
-			<%= image_tag 'shane_randolph_photo.jpg', class:'home-main-image'%>
-
-		</div>
-
-	</section>
-
-
-	<section class="reveal-panel" id="marketing" style="display: none;">
-
-		<div class="text-content">
-
-			<h2>Marketing</h2>
-
-			<p>Thesis</p>
-
-			<p>Reference Projects</p>
-
-			<ul>
-				<li><a>Web Development</a></li>
-				<li><a>Design</a></li>
-
-			</ul>
-
-			<p>Suggested on the Subject</p>
-
-			<ul>
-				<li><a>Book 1</a></li>
-				<li><a>Blog 1</a></li>
-
-			</ul>
-
-			<p>Segway language between this section and the next</p>
-
-			<br>
-
-			<a class="button blue-background click-to-reveal" data-reveal-panel-id="contact">Next</a>
-
-		</div>
-
-		<div class="image-content">
-
-			<%= image_tag 'shane_randolph_photo.jpg', class:'home-main-image'%>
-
-		</div>
-
-	</section>
-
-	<section id="contact" class="reveal-panel" id="contact" style="display: none;">
-
-		<div class="text-content">
-
-			<h2>Contact</h2>
-
-		</div>
-
-		<div class="image-content">
-
-			<%= image_tag 'shane_randolph_photo.jpg', class:'home-main-image'%>
-
-		</div>
-
-
-
-	</section>
+	<%= render 'pages/home_contact' %>
 
 </div>
