--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -126,6 +126,7 @@ body{
 	    		font-size: 1rem;
 			    line-height: 2em;
 			    margin: 10px 0;
+			    text-align: justify;
 	    	}
 
 	    	ul{
