--- a/app/views/pages/_home_welcome.html.erb
+++ b/app/views/pages/_home_welcome.html.erb
@@ -5,14 +5,14 @@
 		
 		<h2>Hello!</h2>
 
-		<p>I am Shane Randolph, a full-stack developer based in Montreal. I make things on the internet ... tried many things ... reached some level of professional competency at a few things, including:</p>
+		<p>I am Shane Randolph, a web developer and UI/UX designer based in Montreal. I have expertise  ... development, design, and marketing I make things on the internet ... tried many things ... reached some level of professional competency at a few things, including:</p>
 		<ul>
 			<li><a>Development</a></li>
 			<li><a>Design</a></li>
 			<li><a>Marketing</a></li>
 		</ul>
 
-		<p>Click the button below to step-by-step guide or skip to a section using (the menu on the left/bottom)</p>
+		<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
 
 		<br>
 
