--- a/app/views/pages/_home_design.html.erb
+++ b/app/views/pages/_home_design.html.erb
@@ -5,9 +5,12 @@
 
 		<h2>Design</h2>
 
-		<p>... based on the ... the web design is fundamnetally communication technology.  ... did they get the message?</p>
+		<p>I create responsive, mobile-first web applications using front-end frameworks, including AngularJS, Bootstrap, Jquery, and plain-old CSS media queries.</p>
 
-		<p>Recent projects</p>
+		<p>I think it is important to solve design challenges with the knowledge that web design is fundamentally a form of communication -- sending a message <i>accurately</i> between the developer and the end-user. As a result, I measure the effectiveness of my designs first and foremost based on user data (conversion rate, engagement, etc.)</p>
+
+		
+		<p>Some of my recent design work includes:</p>
 
 		<ul>
 			<li><a>Hiro Asian Kitchen</a></li>
@@ -19,7 +22,7 @@
 
 		<br>
 
-		<a class="button blue-background click-to-reveal" data-reveal-panel-id="marketing">Next</a>
+		<a class="button blue-background click-to-reveal" data-reveal-panel-id="marketing">Next <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
 
 	</div>
 
