--- a/app/views/pages/_home_development.html.erb
+++ b/app/views/pages/_home_development.html.erb
@@ -5,7 +5,7 @@
 
 		<h2>Development</h2>
 
-		<p>I have 4 years of experience developing full-featured web applications, many on behalf of startups. Backend technologies including Ruby, Python, and PHP.  ... features including payment processing, geocoding, and algorithmic search. .. optimized performance</p>
+		<p>I have developed many full-featured web applications, many on behalf of startups. I work primarily with Ruby but am also very familiar with Python and PHP. I have successfully implemented application features including payment processing, geocoding, and algorithmic search, and performance optimization.</p>
 
 		<p>Reference Projects</p>
 
@@ -19,13 +19,13 @@
 
 		<br>
 
-		<a class="button blue-background click-to-reveal" data-reveal-panel-id="design">Next</a>
+		<a class="button blue-background click-to-reveal" data-reveal-panel-id="design">Next <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
 
 	</div>
 
 	<div class="image-content">
 
-		<%= image_tag 'shane_randolph_photo.jpg', class:'home-main-image'%>
+		<%= image_tag 'sublime_text_photo.PNG', class:'blurred'%>
 
 	</div>
 
