--- a/app/views/pages/_home_marketing.html.erb
+++ b/app/views/pages/_home_marketing.html.erb
@@ -5,7 +5,7 @@
 
 		<h2>Marketing</h2>
 
-		<p>...experience in social media consultant, SEO consultant, and ... user acquisition, affiliate marketing... I also hold a B.S. in Business and an M.A. in Economics.</p>
+		<p>...experience in social media consultant, SEO consultant, and ... user acquisition, affiliate marketing... I also hold a B.S. in Business and an M.A. in Economics from a pretty good business school.</p>
 
 		<p>Reference Projects</p>
 
@@ -27,7 +27,7 @@
 
 		<br>
 
-		<a class="button blue-background click-to-reveal" data-reveal-panel-id="contact">Next</a>
+		<a class="button blue-background click-to-reveal" data-reveal-panel-id="contact">Next <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
 
 	</div>
 
