--- a/app/views/pages/_home_welcome.html.erb
+++ b/app/views/pages/_home_welcome.html.erb
@@ -5,24 +5,19 @@
 		
 		<h2>Hello!</h2>
 
-		<p>I am Shane Randolph, a web developer and UI/UX designer based in Montreal. I have expertise  ... development, design, and marketing I make things on the internet ... tried many things ... reached some level of professional competency at a few things, including:</p>
-		<ul>
-			<li><a>Development</a></li>
-			<li><a>Design</a></li>
-			<li><a>Marketing</a></li>
-		</ul>
+		<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of web applications.</p>
 
 		<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
 
 		<br>
 
-		<a class="button blue-background click-to-reveal" data-reveal-panel-id="development">Next</a>
+		<a class="button blue-background click-to-reveal" data-reveal-panel-id="development">Next <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
 
 	</div>
 
 	<div class="image-content">
 
-		<%= image_tag 'shane_randolph_photo.jpg', class:'home-main-image'%>
+		<%= image_tag 'montreal_photo.jpg', class:'home-main-image'%>
 
 	</div>
 
