--- a/app/assets/stylesheets/media_queries.css.scss
+++ b/app/assets/stylesheets/media_queries.css.scss
@@ -24,6 +24,159 @@
 				margin-bottom: -20px;
 			}
 
+		
+
+			.main-container{
+
+				top: 0 !important;
+		    	left: 0 !important;
+		    	width: auto !important;
+		    	position: fixed;
+
+
+				.left-block{
+				    position: absolute;
+				    top: 0;
+				    bottom: 0;
+				    left: 0;
+				    width: 15vw;
+				    min-width: 200px;
+				    background: #000;
+				    
+				    box-shadow: 0 0 4px #e5e5e5;
+				    overflow: hidden;
+				    padding-top: 5vh;
+				    height: inherit;
+				    right: inherit;
+
+				    border-width: 0px 3px 0px 0px;
+				    border-style: solid;
+				    -webkit-border-image: -webkit-gradient(linear, 0 0, 0 100%, from(red), to(rgba(50, 0, 200, 0.8))) 1 100%;
+				    -webkit-border-image: -webkit-linear-gradient(red, rgba(50, 0, 200, 0.8)) 1 100%;
+				    -moz-border-image: -moz-linear-gradient(red, rgba(50, 0, 200, 0.8)) 1 100%;
+				    -o-border-image: -o-linear-gradient(red, rgba(50, 0, 200, 0.8)) 1 100%;
+				    border-image: linear-gradient(to bottom, red, rgba(50, 0, 200, 0.8)) 1 100%;
+
+				    .main-image-container{
+
+				    	padding:10px;
+				    	width: 100%;
+						max-width: 100%;
+						margin: 0 auto;
+						text-align: center;
+
+					    .home-main-image{
+					    	width: 150px;
+					    	height: 150px;
+						    max-width: 100%;
+						    max-height: 100%;
+						    border-radius: 50%;
+						    border: 3px solid #fff;
+					    }
+
+				    }
+
+				    h1{
+				    	color: #fff;
+				    	font-size: 20px;
+				    	text-align: center;
+				    	display: block;
+
+				    }
+
+				    .main-menu{
+
+				    	display: block;
+				    	
+				    	a{
+				    		display: block;
+						    width: 100%;
+						    height: 3em;
+						    line-height: 3em;
+						    text-transform: uppercase;
+						    color: #ccc;
+						    cursor: pointer;
+						    font-size: 16px;
+						    white-space: nowrap;
+						    padding: 0 0 0 1.5vw;
+						    -webkit-transition: box-shadow 300ms;
+						    transition: box-shadow 300ms;
+						    box-shadow: inset 0 0 #e6e6e6;
+						    text-decoration: none;
+				    	}
+
+				    	a:hover {
+						    box-shadow: inset 1vw 0 #eee;
+						    text-decoration: none;
+						}
+
+						a.active{
+							background: #eee;
+							color: #000;
+							font-weight: 700;
+						}
+				    }
+				}
+
+				.right-block{
+					position: absolute;
+				    top: 0;
+				    left: 200px;
+				    bottom: 0;
+				    right: 0;
+				    width: 85vw;
+
+
+				    section{
+				    	padding: 10vh 3vw;
+				    	color: #666;
+
+				    	.text-content{
+				    		width: 40vw;
+						    display: inline-block;
+						    vertical-align: top;
+						    padding: 0 3vw;
+				    	}
+
+				    	.image-content{
+						    width: 30vw;
+						    display: inline-block;
+						    vertical-align: top;
+
+						    img{
+						    	max-width:100%;
+						    }
+				    	}
+
+				    	h2{
+				    		font-size: 40px;
+				    		font-weight: 600;
+			    			line-height: 1.2em;
+			    			margin: .5rem 0 2.5rem;
+			    			color: #000;
+				    	}
+
+				    	p{
+				    		font-size: 16px;
+						    line-height: 2em;
+						    margin: 10px 0;
+						    text-align: justify;
+				    	}
+
+				    	ul{
+				    		display: block;
+						    list-style-type: disc;
+						    -webkit-margin-before: 1em;
+						    -webkit-margin-after: 1em;
+						    -webkit-margin-start: 0px;
+						    -webkit-margin-end: 0px;
+						    -webkit-padding-start: 40px;
+				    	}
+
+				    }
+			    }
+			}
+
 		}
 
 	}
