--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -8,23 +8,26 @@ body{
 		top: 0 !important;
     	left: 0 !important;
     	width: auto !important;
+    	position: relative;
 
 	}
 
-	.left-block{
-	    position: absolute;
-	    top: 0;
-	    bottom: 0;
-	    left: 0;
-	    width: 15vw;
-	    background: #000;
-	    border-right: 1px solid #e5e5e5;
-	    box-shadow: 0 0 4px #e5e5e5;
-	    overflow: hidden;
-	    padding-top: 5vh;
-	    border-right: 4px solid yellow;
+	.left-block-offset{
+		height: 80px;
+		width: 100%;
+	}
 
-	    border-width: 0px 3px 0px 0px;
+	.left-block{
+	    position: fixed;
+	    z-index: 999;
+	    top: 0;
+	    left: 0;
+	    width: 100%;
+	    right: 0px;
+	    height: 80px;
+	    background: #000;
+
+	    border-width: 0px 0px 3px 0px;
 	    border-style: solid;
 	    -webkit-border-image: -webkit-gradient(linear, 0 0, 0 100%, from(red), to(rgba(50, 0, 200, 0.8))) 1 100%;
 	    -webkit-border-image: -webkit-linear-gradient(red, rgba(50, 0, 200, 0.8)) 1 100%;
@@ -35,13 +38,15 @@ body{
 	    .main-image-container{
 
 	    	padding:10px;
-	    	width: 150px;
-			max-width: 100%;
-			height: 150px;
-			margin: 0 auto;
+	    	width: inherit;
+			max-width: 80px;
+			height: inherit;
+			margin: 0;
+			display: inline-block;
 
 		    .home-main-image{
-		    	width: 200px;
+		    	width: 70px;
+		    	height: 70px;
 			    max-width: 100%;
 			    max-height: 100%;
 			    border-radius: 50%;
@@ -54,9 +59,13 @@ body{
 	    	color: #fff;
 	    	font-size: 20px;
 	    	text-align: center;
+	    	display: inline-block;
 	    }
 
 	    .main-menu{
+	    	
+	    	display: none;
+
 	    	a{
 	    		display: block;
 			    width: 100%;
@@ -65,7 +74,7 @@ body{
 			    text-transform: uppercase;
 			    color: #ccc;
 			    cursor: pointer;
-			    font-size: 1.1rem;
+			    font-size: 16px;
 			    white-space: nowrap;
 			    padding: 0 0 0 1.5vw;
 			    -webkit-transition: box-shadow 300ms;
@@ -88,26 +97,27 @@ body{
 	}
 
 	.right-block{
-		position: absolute;
-	    top: 0;
+		position: relative;
+	    top: 0px;
 	    bottom: 0;
 	    right: 0;
-	    width: 85vw;
+	    width: 100%;
+	    z-index: 99;
 
 	    section{
-	    	padding: 10vh 3vw;
+	    	padding: 20px;
 	    	color: #666;
 
 	    	.text-content{
-	    		width: 40vw;
+	    		width: 100%;
 			    display: inline-block;
 			    vertical-align: top;
 			    padding: 0 3vw;
 	    	}
 
 	    	.image-content{
-			    width: 30vw;
-			    display: inline-block;
+			    width: 35%;
+			    display: none;
 			    vertical-align: top;
 
 			    img{
@@ -116,7 +126,7 @@ body{
 	    	}
 
 	    	h2{
-	    		font-size: 3rem;
+	    		font-size: 40px;
 	    		font-weight: 600;
     			line-height: 1.2em;
     			margin: .5rem 0 2.5rem;
@@ -124,7 +134,7 @@ body{
 	    	}
 
 	    	p{
-	    		font-size: 1rem;
+	    		font-size: 16px;
 			    line-height: 2em;
 			    margin: 10px 0;
 			    text-align: justify;
@@ -144,7 +154,7 @@ body{
 }
 
 .button{
-	padding: 10px 25px;
+	padding: 10px 50px;
     border-radius: 2px;
     
     display: inline-block;
@@ -166,4 +176,38 @@ body{
 .button.blue-background{
 	color: #fff;
 	background: #2980b9;
+}
+
+img.blurred{
+	filter: blur(1px);
+	// Browser Specific
+	-webkit-filter: blur(1px);
+	-moz-filter: blur(1px);
+	-o-filter: blur(1px);
+	-ms-filter: blur(1px);
+}
+
+.fixed-nav{
+	padding: 10px 10px;
+
+	span{
+		background: #000;
+		color: #fff;
+		line-height: 40px;
+		padding: 8px 15px;
+		border-radius: 20px;
+		margin-right: 10px;
+		cursor: pointer;
+	}
+
+	span:last-child{
+		margin-right: 0px;
+	}
+
+	span.active{
+		background: #eee;
+		color: #000;
+		font-weight: 600;
+		border: 1px solid #000;
+	}
 }
