--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 
 	  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
+	  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+
 	</head>
 
 	<body>
