--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,20 @@
 	</nav>
 </div>
 
+<div class="left-block-offset mobile-only">
+
+</div>
+
+<div class="fixed-nav mobile-only">
+
+	<span class="click-to-reveal active" data-reveal-panel-id="welcome">Welcome</span>
+	<span class="click-to-reveal" data-reveal-panel-id="development">Development</span>
+	<span class="click-to-reveal" data-reveal-panel-id="design">Design</span>
+	<span class="click-to-reveal" data-reveal-panel-id="marketing">Marketing</span>
+	<span class="click-to-reveal" data-reveal-panel-id="contact">Contact</span>
+
+</div>
+
 <div class="right-block">
 	
 	<%= render 'pages/home_welcome' %>
