--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -37,7 +37,7 @@ body{
 
 	    .main-image-container{
 
-	    	padding:10px;
+	    	padding:5px 10px;
 	    	width: inherit;
 			max-width: 80px;
 			height: inherit;
@@ -47,8 +47,6 @@ body{
 		    .home-main-image{
 		    	width: 70px;
 		    	height: 70px;
-			    max-width: 100%;
-			    max-height: 100%;
 			    border-radius: 50%;
 			    border: 3px solid #fff;
 		    }
@@ -76,7 +74,7 @@ body{
 			    cursor: pointer;
 			    font-size: 16px;
 			    white-space: nowrap;
-			    padding: 0 0 0 1.5vw;
+			    padding: 0 0 0 20px;
 			    -webkit-transition: box-shadow 300ms;
 			    transition: box-shadow 300ms;
 			    box-shadow: inset 0 0 #e6e6e6;
@@ -198,6 +196,7 @@ img.blurred{
 		border-radius: 20px;
 		margin-right: 10px;
 		cursor: pointer;
+		box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
 	}
 
 	span:last-child{
@@ -209,5 +208,6 @@ img.blurred{
 		color: #000;
 		font-weight: 600;
 		border: 1px solid #000;
+		box-shadow: none;
 	}
 }
