--- a/app/views/pages/_home_development.html.erb
+++ b/app/views/pages/_home_development.html.erb
@@ -1,31 +1,53 @@
 
 <section class="reveal-panel" id="development" style="display: none;">
 
+	<header>Development</header>
+
 	<div class="text-content">
 
-		<h2>Development</h2>
-
 		<p>I have developed many full-featured web applications, many on behalf of startups. I work primarily with Ruby but am also very familiar with Python and PHP. I have successfully implemented application features including payment processing, geocoding, and algorithmic search, and performance optimization.</p>
-
-		<p>Reference Projects</p>
-
-		<ul>
-			<li><a>ArtYam</a></li>
-			<li><a>Servmanity</a></li>
-
-		</ul>
 
 		<p>In addition to ... development, ... design of applications effective ...</p>
 
 		<br>
 
-		<a class="button blue-background click-to-reveal" data-reveal-panel-id="design">Next <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
+		<a class="button blue-background click-to-reveal" data-reveal-panel-id="design">See my Design Experience <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
 
 	</div>
 
 	<div class="image-content">
 
-		<%= image_tag 'sublime_text_photo.PNG', class:'blurred'%>
+		<div class="centered">
+
+			<ul class="" id="rig">
+
+				<li>
+					<a class="rig-cell" href="<%= root_path %>">
+
+					<%= image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
+			        
+			        <span class="rig-overlay"></span>
+			        
+			        <span class="rig-text">ArtYam</span>
+
+				    </a>
+				</li>
+
+				<li>
+					<a class="rig-cell" href="<%= root_path %>">
+
+					<%= image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
+			        
+			        <span class="rig-overlay"></span>
+			        
+			        <span class="rig-text">Servmanity</span>
+
+				    </a>
+				</li>
+
+			</ul>
+
+		</div>
 
 	</div>
 
