--- a/app/views/pages/_home_welcome.html.erb
+++ b/app/views/pages/_home_welcome.html.erb
@@ -1,9 +1,9 @@
 
 <section class="reveal-panel" id="welcome">
 
+	<header>Hello!</header>
+
 	<div class="text-content">
-		
-		<h2>Hello!</h2>
 
 		<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of web applications.</p>
 
@@ -11,7 +11,7 @@
 
 		<br>
 
-		<a class="button blue-background click-to-reveal" data-reveal-panel-id="development">Next <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
+		<a class="button blue-background click-to-reveal" data-reveal-panel-id="development">See My Development Experience <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
 
 	</div>
 
