--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -14,7 +14,6 @@
 		<a class="menu-option click-to-reveal" data-reveal-panel-id="design">Design/UI</a>
 		<a class="menu-option click-to-reveal" data-reveal-panel-id="marketing">Marketing</a>
 		<a class="menu-option click-to-reveal" data-reveal-panel-id="contact">Contact</a>
-		
 	</nav>
 </div>
 
@@ -34,14 +33,11 @@
 
 <div class="right-block">
 	
-	<%= render 'pages/home_welcome' %>
+	<section class="reveal-panel" id="contact">
 
-	<%= render 'pages/home_development' %>
+		<h2>Contact</h2>
 
-	<%= render 'pages/home_design' %>
 
-	<%= render 'pages/home_marketing' %>
-
-	<%= render 'pages/home_contact' %>
+	</section>
 
 </div>
