--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -123,7 +123,7 @@ body{
 			    }
 	    	}
 
-	    	h2{
+	    	header{
 	    		font-size: 40px;
 	    		font-weight: 600;
     			line-height: 1.2em;
