--- a/app/views/pages/_home_marketing.html.erb
+++ b/app/views/pages/_home_marketing.html.erb
@@ -1,39 +1,53 @@
 
 <section class="reveal-panel" id="marketing" style="display: none;">
 
+	<header>Marketing</header>
+
 	<div class="text-content">
 
-		<h2>Marketing</h2>
-
 		<p>...experience in social media consultant, SEO consultant, and ... user acquisition, affiliate marketing... I also hold a B.S. in Business and an M.A. in Economics from a pretty good business school.</p>
-
-		<p>Reference Projects</p>
-
-		<ul>
-			<li><a>Web Development</a></li>
-			<li><a>Design</a></li>
-
-		</ul>
-
-		<p>Suggested on the Subject</p>
-
-		<ul>
-			<li><a>Book 1</a></li>
-			<li><a>Blog 1</a></li>
-
-		</ul>
 
 		<p>Segway language between this section and the next</p>
 
 		<br>
 
-		<a class="button blue-background click-to-reveal" data-reveal-panel-id="contact">Next <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
+		<a class="button blue-background click-to-reveal" data-reveal-panel-id="contact">Go to my Contact Page <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
 
 	</div>
 
 	<div class="image-content">
 
-		<%= image_tag 'shane_randolph_photo.jpg', class:'home-main-image'%>
+		<div class="centered">
+
+			<ul class="" id="rig">
+
+				<li>
+					<a class="rig-cell" href="<%= root_path %>">
+
+					<%= image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
+			        
+			        <span class="rig-overlay"></span>
+			        
+			        <span class="rig-text">ArtYam</span>
+
+				    </a>
+				</li>
+
+				<li>
+					<a class="rig-cell" href="<%= root_path %>">
+
+					<%= image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
+			        
+			        <span class="rig-overlay"></span>
+			        
+			        <span class="rig-text">Servmanity</span>
+
+				    </a>
+				</li>
+
+			</ul>
+
+		</div>
 
 	</div>
 
