--- a/app/views/pages/_home_development.html.erb
+++ b/app/views/pages/_home_development.html.erb
@@ -5,9 +5,11 @@
 
 	<div class="text-content">
 
-		<p>I have developed many full-featured web applications, many on behalf of startups. I work primarily with Ruby but am also very familiar with Python and PHP. I have successfully implemented application features including payment processing, geocoding, and algorithmic search, and performance optimization.</p>
+		<p>I have developed full-featured web applications, including eCommerce, marketplace, social media, and geolocation-enabled directory applications.</p>
 
-		<p>In addition to ... development, ... design of applications effective ...</p>
+		<p>I work primarily with <%= link_to "Ruby", "http://rubyonrails.org", target: :_blank  %> but am also very familiar with <%= link_to "Python", "https://python.org", target: :_blank %> and <%= link_to "PHP", "http://PHP.net", target: :_blank %>.</p>
+
+		<p>Check out some of my development projects to the right or press the button below to learn more about my design experience.</p>
 
 		<br>
 
@@ -22,9 +24,9 @@
 			<ul class="" id="rig">
 
 				<li>
-					<a class="rig-cell" href="<%= root_path %>">
+					<a class="rig-cell show-modal" data-reveal-panel-id="artyam-page">
 
-					<%= image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
+					<%= image_tag 'artyam_photo.PNG', class:'rig-img'%>
 			        
 			        <span class="rig-overlay"></span>
 			        
@@ -34,9 +36,9 @@
 				</li>
 
 				<li>
-					<a class="rig-cell" href="<%= root_path %>">
+					<a class="rig-cell show-modal" data-reveal-panel-id="servmanity-page">
 
-					<%= image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
+					<%= image_tag 'servmanity_photo.PNG', class:'rig-img'%>
 			        
 			        <span class="rig-overlay"></span>
 			        
@@ -52,3 +54,7 @@
 	</div>
 
 </section>
+
+<%= render 'pages/artyam' %>
+
+<%= render 'pages/servmanity' %>
