--- a/app/views/pages/_home_marketing.html.erb
+++ b/app/views/pages/_home_marketing.html.erb
@@ -5,9 +5,11 @@
 
 	<div class="text-content">
 
-		<p>...experience in social media consultant, SEO consultant, and ... user acquisition, affiliate marketing... I also hold a B.S. in Business and an M.A. in Economics from a pretty good business school.</p>
+		<p>I have worked with software startups, eCommerce stores, and brick and mortar businesses to market their products online.  My areas of marketing expertise include growing social media presence, search engine optimization (SEO), user acquisition and conversion, and copywriting.</p>
 
-		<p>Segway language between this section and the next</p>
+		<p>I guess I should also mention that I have a B.S. in Business and an M.A. in Economics from a <%= link_to "pretty good business school", "http://miamioh.edu/fsb/", target: :_blank %>.</p>
+
+		<p>Check out some of my previous marketing clients to the right or continue below to contact me.</p>
 
 		<br>
 
