--- a/app/views/pages/_home_welcome.html.erb
+++ b/app/views/pages/_home_welcome.html.erb
@@ -5,7 +5,7 @@
 
 	<div class="text-content">
 
-		<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of web applications.</p>
+		<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
 
 		<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
 
