--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -28,6 +28,7 @@
     padding: 10px;
     position: relative;
     overflow:hidden;
+    cursor: pointer;
 }
         
 /* If have the image layer */
@@ -56,7 +57,7 @@
     margin: auto;
     background: #000;
     background-size:50px 50px;
-    opacity:0.2;
+    opacity:0.4;
     filter:alpha(opacity=0);/*For IE6 - IE8*/
     transition:all 0.6s;
 }
@@ -79,7 +80,7 @@
     font-weight:700;
     top:40%;
     color: #fff;
-    text-shadow: 0px 1px 1px rgba(0,0,0,0.5);
+    text-shadow: 0px 1px 1px rgba(0,0,0,0.8);
     opacity:1;
     filter:alpha(opacity=0);/*For older IE*/
     transform:translateY(-20px);
