--- a/app/assets/stylesheets/media_queries.css.scss
+++ b/app/assets/stylesheets/media_queries.css.scss
@@ -126,7 +126,7 @@
 
 				    section{
 				    	padding: 10vh 3vw;
-				    	color: #666;
+				    	
 
 				    	.text-content{
 				    		width: 40vw;
@@ -158,7 +158,7 @@
 				    	p{
 				    		font-size: 16px;
 						    line-height: 2em;
-						    margin: 10px 0;
+						    margin: 10px 0 15px 0px;
 						    text-align: justify;
 				    	}
 
