--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,6 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body{
+
+	a:hover{
+		text-decoration: none;
+	}
+	
 	.main-container{
 
 		top: 0 !important;
@@ -26,6 +31,7 @@ body{
 	    right: 0px;
 	    height: 80px;
 	    background: #000;
+
 
 	    border-width: 0px 0px 3px 0px;
 	    border-style: solid;
@@ -104,7 +110,7 @@ body{
 
 	    section{
 	    	padding: 20px;
-	    	color: #666;
+	    	color: #333;
 
 	    	.text-content{
 	    		width: 100%;
@@ -134,7 +140,7 @@ body{
 	    	p{
 	    		font-size: 16px;
 			    line-height: 2em;
-			    margin: 10px 0;
+			    margin: 10px 0 15px 0px;
 			    text-align: justify;
 	    	}
 
@@ -168,6 +174,7 @@ body{
     letter-spacing: -0.5px;
 
     font-weight: 500;
+    font-size: 16px;
 
 }
 
